--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -1,304 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.21022</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1D3F8C25-77DE-4E04-81DF-5E7EF1ABE914}</ProjectGuid>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>Mosa.Platform.ARMv8A32</AssemblyName>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>
-    </AppDesignerFolder>
-    <RootNamespace>Mosa.Platform.ARMv8A32</RootNamespace>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation />
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <RemoveIntegerChecks>False</RemoveIntegerChecks>
+    <LangVersion>8.0</LangVersion>
+    <DebugType>full</DebugType>
+    <FileAlignment>4096</FileAlignment>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <RegisterForComInterop>False</RegisterForComInterop>
+    <BaseAddress>285212672</BaseAddress>
+    <OutputPath>..\..\bin\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
-    <DebugType>full</DebugType>
     <NoWarn>0414</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
-    <DebugType>full</DebugType>
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningLevel>2</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj" />
+    <ProjectReference Include="..\Mosa.Compiler.Framework\Mosa.Compiler.Framework.csproj" />
+    <ProjectReference Include="..\Mosa.Compiler.MosaTypeSystem\Mosa.Compiler.MosaTypeSystem.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj">
-      <Project>{0b1011a6-8fcd-4f9e-bbb8-8db86e23d2e8}</Project>
-      <Name>Mosa.Compiler.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Compiler.Framework\Mosa.Compiler.Framework.csproj">
-      <Project>{75A12A8A-8C8F-4D1E-801B-689D8F781BF4}</Project>
-      <Name>Mosa.Compiler.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Compiler.MosaTypeSystem\Mosa.Compiler.MosaTypeSystem.csproj">
-      <Project>{5f30a68e-05bf-40ea-b576-5ebcde520559}</Project>
-      <Name>Mosa.Compiler.MosaTypeSystem</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Architecture.cs" />
-    <Compile Include="ArchitectureFeatureFlags.cs" />
-    <Compile Include="ARMv8A32.cs" />
-    <Compile Include="ARMv8A32Instruction.cs" />
-    <Compile Include="ARMv8A32Instructions.cs" />
-    <Compile Include="BaseTransformationStage.cs" />
-    <Compile Include="ARMHelper.cs" />
-    <Compile Include="GeneralPurposeRegister.cs" />
-    <Compile Include="Instructions\Abs.cs" />
-    <Compile Include="Instructions\AbsImm.cs" />
-    <Compile Include="Instructions\Adc.cs" />
-    <Compile Include="Instructions\AdcImm.cs" />
-    <Compile Include="Instructions\AdcImmShift.cs" />
-    <Compile Include="Instructions\AdcRegShift.cs" />
-    <Compile Include="Instructions\Add.cs" />
-    <Compile Include="Instructions\AddImm.cs" />
-    <Compile Include="Instructions\AddImmShift.cs" />
-    <Compile Include="Instructions\AddRegShift.cs" />
-    <Compile Include="Instructions\Adf.cs" />
-    <Compile Include="Instructions\AdfImm.cs" />
-    <Compile Include="Instructions\And.cs" />
-    <Compile Include="Instructions\AndImm.cs" />
-    <Compile Include="Instructions\AndImmShift.cs" />
-    <Compile Include="Instructions\AndRegShift.cs" />
-    <Compile Include="Instructions\Asr.cs" />
-    <Compile Include="Instructions\AsrImm.cs" />
-    <Compile Include="Instructions\B.cs" />
-    <Compile Include="Instructions\Bic.cs" />
-    <Compile Include="Instructions\BicImm.cs" />
-    <Compile Include="Instructions\BicImmShift.cs" />
-    <Compile Include="Instructions\BicRegShift.cs" />
-    <Compile Include="Instructions\Bkpt.cs" />
-    <Compile Include="Instructions\Bl.cs" />
-    <Compile Include="Instructions\Bx.cs" />
-    <Compile Include="Instructions\Cmf.cs" />
-    <Compile Include="Instructions\Cmfe.cs" />
-    <Compile Include="Instructions\Cmn.cs" />
-    <Compile Include="Instructions\CmnImm.cs" />
-    <Compile Include="Instructions\CmnImmShift.cs" />
-    <Compile Include="Instructions\CmnRegShift.cs" />
-    <Compile Include="Instructions\Cmp.cs" />
-    <Compile Include="Instructions\CmpImm.cs" />
-    <Compile Include="Instructions\CmpImmShift.cs" />
-    <Compile Include="Instructions\CmpRegShift.cs" />
-    <Compile Include="Instructions\Cnf.cs" />
-    <Compile Include="Instructions\Cnfe.cs" />
-    <Compile Include="Instructions\Dmb.cs" />
-    <Compile Include="Instructions\Dsb.cs" />
-    <Compile Include="Instructions\Dvf.cs" />
-    <Compile Include="Instructions\DvfImm.cs" />
-    <Compile Include="Instructions\Dvr.cs" />
-    <Compile Include="Instructions\DvrImm.cs" />
-    <Compile Include="Instructions\Eor.cs" />
-    <Compile Include="Instructions\EorImm.cs" />
-    <Compile Include="Instructions\EorImmShift.cs" />
-    <Compile Include="Instructions\EorRegShift.cs" />
-    <Compile Include="Instructions\Fdv.cs" />
-    <Compile Include="Instructions\FdvImm.cs" />
-    <Compile Include="Instructions\Fix.cs" />
-    <Compile Include="Instructions\Flt.cs" />
-    <Compile Include="Instructions\FltImm.cs" />
-    <Compile Include="Instructions\Fml.cs" />
-    <Compile Include="Instructions\FmlImm.cs" />
-    <Compile Include="Instructions\Frd.cs" />
-    <Compile Include="Instructions\FrdImm.cs" />
-    <Compile Include="Instructions\Isb.cs" />
-    <Compile Include="Instructions\LdfDown.cs" />
-    <Compile Include="Instructions\LdfDownOffset.cs" />
-    <Compile Include="Instructions\LdfUp.cs" />
-    <Compile Include="Instructions\LdfUpOffset.cs" />
-    <Compile Include="Instructions\Ldm.cs" />
-    <Compile Include="Instructions\Ldmfd.cs" />
-    <Compile Include="Instructions\Ldmia.cs" />
-    <Compile Include="Instructions\LdrDown16.cs" />
-    <Compile Include="Instructions\LdrDown32.cs" />
-    <Compile Include="Instructions\LdrDown8.cs" />
-    <Compile Include="Instructions\LdrDownImm16.cs" />
-    <Compile Include="Instructions\LdrDownImm32.cs" />
-    <Compile Include="Instructions\LdrDownImm8.cs" />
-    <Compile Include="Instructions\LdrDownImmS16.cs" />
-    <Compile Include="Instructions\LdrDownImmS8.cs" />
-    <Compile Include="Instructions\LdrDownS16.cs" />
-    <Compile Include="Instructions\LdrDownS8.cs" />
-    <Compile Include="Instructions\LdrUp16.cs" />
-    <Compile Include="Instructions\LdrUp32.cs" />
-    <Compile Include="Instructions\LdrUp8.cs" />
-    <Compile Include="Instructions\LdrUpImm16.cs" />
-    <Compile Include="Instructions\LdrUpImm32.cs" />
-    <Compile Include="Instructions\LdrUpImm8.cs" />
-    <Compile Include="Instructions\LdrUpImmS16.cs" />
-    <Compile Include="Instructions\LdrUpImmS8.cs" />
-    <Compile Include="Instructions\LdrUpS16.cs" />
-    <Compile Include="Instructions\LdrUpS8.cs" />
-    <Compile Include="Instructions\Lsl.cs" />
-    <Compile Include="Instructions\LslImm.cs" />
-    <Compile Include="Instructions\Lsr.cs" />
-    <Compile Include="Instructions\LsrImm.cs" />
-    <Compile Include="Instructions\Mla.cs" />
-    <Compile Include="Instructions\Mlal.cs" />
-    <Compile Include="Instructions\Mnf.cs" />
-    <Compile Include="Instructions\MnfImm.cs" />
-    <Compile Include="Instructions\Mov.cs" />
-    <Compile Include="Instructions\MovImm.cs" />
-    <Compile Include="Instructions\MovImmShift.cs" />
-    <Compile Include="Instructions\MovkImm.cs" />
-    <Compile Include="Instructions\MovRegShift.cs" />
-    <Compile Include="Instructions\MovtImm.cs" />
-    <Compile Include="Instructions\Mrs.cs" />
-    <Compile Include="Instructions\Msr.cs" />
-    <Compile Include="Instructions\Muf.cs" />
-    <Compile Include="Instructions\MufImm.cs" />
-    <Compile Include="Instructions\Mul.cs" />
-    <Compile Include="Instructions\Mull.cs" />
-    <Compile Include="Instructions\Mvf.cs" />
-    <Compile Include="Instructions\MvfImm.cs" />
-    <Compile Include="Instructions\Mvn.cs" />
-    <Compile Include="Instructions\MvnImm.cs" />
-    <Compile Include="Instructions\MvnImmShift.cs" />
-    <Compile Include="Instructions\MvnRegShift.cs" />
-    <Compile Include="Instructions\Nop.cs" />
-    <Compile Include="Instructions\Orr.cs" />
-    <Compile Include="Instructions\OrrImm.cs" />
-    <Compile Include="Instructions\OrrImmShift.cs" />
-    <Compile Include="Instructions\OrrRegShift.cs" />
-    <Compile Include="Instructions\Pop.cs" />
-    <Compile Include="Instructions\Push.cs" />
-    <Compile Include="Instructions\Rev.cs" />
-    <Compile Include="Instructions\Rev16.cs" />
-    <Compile Include="Instructions\Revsh.cs" />
-    <Compile Include="Instructions\Rfc.cs" />
-    <Compile Include="Instructions\Rfs.cs" />
-    <Compile Include="Instructions\Rmf.cs" />
-    <Compile Include="Instructions\RmfImm.cs" />
-    <Compile Include="Instructions\Rnd.cs" />
-    <Compile Include="Instructions\RndImm.cs" />
-    <Compile Include="Instructions\Ror.cs" />
-    <Compile Include="Instructions\RorImm.cs" />
-    <Compile Include="Instructions\Rsb.cs" />
-    <Compile Include="Instructions\RsbImm.cs" />
-    <Compile Include="Instructions\RsbImmShift.cs" />
-    <Compile Include="Instructions\RsbRegShift.cs" />
-    <Compile Include="Instructions\Rsc.cs" />
-    <Compile Include="Instructions\RscImm.cs" />
-    <Compile Include="Instructions\RscImmShift.cs" />
-    <Compile Include="Instructions\RscRegShift.cs" />
-    <Compile Include="Instructions\Rsf.cs" />
-    <Compile Include="Instructions\RsfImm.cs" />
-    <Compile Include="Instructions\Sbc.cs" />
-    <Compile Include="Instructions\SbcImm.cs" />
-    <Compile Include="Instructions\SbcImmShift.cs" />
-    <Compile Include="Instructions\SbcRegShift.cs" />
-    <Compile Include="Instructions\Sev.cs" />
-    <Compile Include="Instructions\Sqt.cs" />
-    <Compile Include="Instructions\SqtImm.cs" />
-    <Compile Include="Instructions\StfDown.cs" />
-    <Compile Include="Instructions\StfDownOffset.cs" />
-    <Compile Include="Instructions\StfUp.cs" />
-    <Compile Include="Instructions\StfUpOffset.cs" />
-    <Compile Include="Instructions\Stm.cs" />
-    <Compile Include="Instructions\Stmea.cs" />
-    <Compile Include="Instructions\Stmia.cs" />
-    <Compile Include="Instructions\StrDown16.cs" />
-    <Compile Include="Instructions\StrDown32.cs" />
-    <Compile Include="Instructions\StrDown8.cs" />
-    <Compile Include="Instructions\StrDownImm16.cs" />
-    <Compile Include="Instructions\StrDownImm32.cs" />
-    <Compile Include="Instructions\StrDownImm8.cs" />
-    <Compile Include="Instructions\StrDownImmS16.cs" />
-    <Compile Include="Instructions\StrDownImmS8.cs" />
-    <Compile Include="Instructions\StrDownS16.cs" />
-    <Compile Include="Instructions\StrDownS8.cs" />
-    <Compile Include="Instructions\StrUp16.cs" />
-    <Compile Include="Instructions\StrUp32.cs" />
-    <Compile Include="Instructions\StrUp8.cs" />
-    <Compile Include="Instructions\StrUpImm16.cs" />
-    <Compile Include="Instructions\StrUpImm32.cs" />
-    <Compile Include="Instructions\StrUpImm8.cs" />
-    <Compile Include="Instructions\StrUpImmS16.cs" />
-    <Compile Include="Instructions\StrUpImmS8.cs" />
-    <Compile Include="Instructions\StrUpS16.cs" />
-    <Compile Include="Instructions\StrUpS8.cs" />
-    <Compile Include="Instructions\Sub.cs" />
-    <Compile Include="Instructions\SubImm.cs" />
-    <Compile Include="Instructions\SubImmShift.cs" />
-    <Compile Include="Instructions\SubRegShift.cs" />
-    <Compile Include="Instructions\Suf.cs" />
-    <Compile Include="Instructions\SufImm.cs" />
-    <Compile Include="Instructions\Svc.cs" />
-    <Compile Include="Instructions\Swi.cs" />
-    <Compile Include="Instructions\Sxtb.cs" />
-    <Compile Include="Instructions\Sxth.cs" />
-    <Compile Include="Instructions\Teq.cs" />
-    <Compile Include="Instructions\TeqImm.cs" />
-    <Compile Include="Instructions\TeqImmShift.cs" />
-    <Compile Include="Instructions\TeqRegShift.cs" />
-    <Compile Include="Instructions\Tst.cs" />
-    <Compile Include="Instructions\TstImm.cs" />
-    <Compile Include="Instructions\TstImmShift.cs" />
-    <Compile Include="Instructions\TstRegShift.cs" />
-    <Compile Include="Instructions\Uxtb.cs" />
-    <Compile Include="Instructions\Uxth.cs" />
-    <Compile Include="Instructions\Wfc.cs" />
-    <Compile Include="Instructions\Wfe.cs" />
-    <Compile Include="Instructions\Wfi.cs" />
-    <Compile Include="Instructions\Wfs.cs" />
-    <Compile Include="Instructions\Yield.cs" />
-    <Compile Include="Intrinsic\Nop.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stages\IRTransformationStage.cs" />
-    <Compile Include="Stages\LongOperandStage.cs" />
-    <Compile Include="Stages\RuntimeCallStage.cs" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
 </Project>
