--- a/Source/Mosa.Platform.x64/Mosa.Platform.x64.csproj
+++ b/Source/Mosa.Platform.x64/Mosa.Platform.x64.csproj
@@ -1,297 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.21022</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F445DB8E-E25A-41EF-A158-C742F14E94E4}</ProjectGuid>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>Mosa.Platform.x64</AssemblyName>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>
-    </AppDesignerFolder>
-    <RootNamespace>Mosa.Platform.x64</RootNamespace>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation />
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyTitle>Mosa.Platform.x64</AssemblyTitle>
+    <Company>MOSA Project</Company>
+    <Product>Mosa.Platform.x64</Product>
+    <Copyright>Copyright ©  2014</Copyright>
+    <BaseAddress>285212672</BaseAddress>
+    <FileAlignment>4096</FileAlignment>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DebugType>full</DebugType>
+    <RegisterForComInterop>False</RegisterForComInterop>
+    <LangVersion>8.0</LangVersion>
+    <RemoveIntegerChecks>False</RemoveIntegerChecks>
+    <OutputPath>..\..\bin\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
-    <DebugType>full</DebugType>
     <NoWarn>0414</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
-    <DebugType>full</DebugType>
-    <BaseAddress>285212672</BaseAddress>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningLevel>2</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj">
-      <Project>{0b1011a6-8fcd-4f9e-bbb8-8db86e23d2e8}</Project>
-      <Name>Mosa.Compiler.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Compiler.Framework\Mosa.Compiler.Framework.csproj">
-      <Project>{75A12A8A-8C8F-4D1E-801B-689D8F781BF4}</Project>
-      <Name>Mosa.Compiler.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Compiler.MosaTypeSystem\Mosa.Compiler.MosaTypeSystem.csproj">
-      <Project>{5f30a68e-05bf-40ea-b576-5ebcde520559}</Project>
-      <Name>Mosa.Compiler.MosaTypeSystem</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Platform.Intel\Mosa.Platform.Intel.csproj">
-      <Project>{17ce4f09-7cbf-49e9-84a7-178db2cbd7c9}</Project>
-      <Name>Mosa.Platform.Intel</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj" />
+    <ProjectReference Include="..\Mosa.Compiler.Framework\Mosa.Compiler.Framework.csproj" />
+    <ProjectReference Include="..\Mosa.Compiler.MosaTypeSystem\Mosa.Compiler.MosaTypeSystem.csproj" />
+    <ProjectReference Include="..\Mosa.Platform.Intel\Mosa.Platform.Intel.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Architecture.cs" />
-    <Compile Include="ArchitectureFeatureFlags.cs" />
-    <Compile Include="BaseTransformationStage.cs" />
-    <Compile Include="CompilerStages\MultibootV1Stage.cs" />
-    <Compile Include="Instructions\Adc32.cs" />
-    <Compile Include="Instructions\Adc64.cs" />
-    <Compile Include="Instructions\Add32.cs" />
-    <Compile Include="Instructions\Add64.cs" />
-    <Compile Include="Instructions\Addsd.cs" />
-    <Compile Include="Instructions\Addss.cs" />
-    <Compile Include="Instructions\And32.cs" />
-    <Compile Include="Instructions\And64.cs" />
-    <Compile Include="Instructions\BochsDebug.cs" />
-    <Compile Include="Instructions\Branch.cs" />
-    <Compile Include="Instructions\Break.cs" />
-    <Compile Include="Instructions\Bt32.cs" />
-    <Compile Include="Instructions\Bt64.cs" />
-    <Compile Include="Instructions\Btr32.cs" />
-    <Compile Include="Instructions\Btr64.cs" />
-    <Compile Include="Instructions\Bts32.cs" />
-    <Compile Include="Instructions\Bts64.cs" />
-    <Compile Include="Instructions\Call.cs" />
-    <Compile Include="Instructions\Cdq32.cs" />
-    <Compile Include="Instructions\Cdq64.cs" />
-    <Compile Include="Instructions\Cli.cs" />
-    <Compile Include="Instructions\CMov32.cs" />
-    <Compile Include="Instructions\CMov64.cs" />
-    <Compile Include="Instructions\Cmp32.cs" />
-    <Compile Include="Instructions\Cmp64.cs" />
-    <Compile Include="Instructions\CmpXChgLoad32.cs" />
-    <Compile Include="Instructions\CmpXChgLoad64.cs" />
-    <Compile Include="Instructions\Comisd.cs" />
-    <Compile Include="Instructions\Comiss.cs" />
-    <Compile Include="Instructions\CpuId.cs" />
-    <Compile Include="Instructions\Cvtsd2ss.cs" />
-    <Compile Include="Instructions\Cvtsi2sd32.cs" />
-    <Compile Include="Instructions\Cvtsi2sd64.cs" />
-    <Compile Include="Instructions\Cvtsi2ss32.cs" />
-    <Compile Include="Instructions\Cvtsi2ss64.cs" />
-    <Compile Include="Instructions\Cvtss2sd.cs" />
-    <Compile Include="Instructions\Cvttsd2si32.cs" />
-    <Compile Include="Instructions\Cvttsd2si64.cs" />
-    <Compile Include="Instructions\Cvttss2si32.cs" />
-    <Compile Include="Instructions\Cvttss2si64.cs" />
-    <Compile Include="Instructions\Dec32.cs" />
-    <Compile Include="Instructions\Dec64.cs" />
-    <Compile Include="Instructions\Div32.cs" />
-    <Compile Include="Instructions\Div64.cs" />
-    <Compile Include="Instructions\Divsd.cs" />
-    <Compile Include="Instructions\Divss.cs" />
-    <Compile Include="Instructions\Hlt.cs" />
-    <Compile Include="Instructions\IDiv32.cs" />
-    <Compile Include="Instructions\IDiv64.cs" />
-    <Compile Include="Instructions\IMul32.cs" />
-    <Compile Include="Instructions\IMul64.cs" />
-    <Compile Include="Instructions\In16.cs" />
-    <Compile Include="Instructions\In32.cs" />
-    <Compile Include="Instructions\In8.cs" />
-    <Compile Include="Instructions\Inc32.cs" />
-    <Compile Include="Instructions\Inc64.cs" />
-    <Compile Include="Instructions\Int.cs" />
-    <Compile Include="Instructions\Invlpg.cs" />
-    <Compile Include="Instructions\IRetd.cs" />
-    <Compile Include="Instructions\Jmp.cs" />
-    <Compile Include="Instructions\JmpExternal.cs" />
-    <Compile Include="Instructions\Lea32.cs" />
-    <Compile Include="Instructions\Lea64.cs" />
-    <Compile Include="Instructions\Leave.cs" />
-    <Compile Include="Instructions\Lgdt.cs" />
-    <Compile Include="Instructions\Lidt.cs" />
-    <Compile Include="Instructions\Lock.cs" />
-    <Compile Include="Instructions\Mov32.cs" />
-    <Compile Include="Instructions\Mov64.cs" />
-    <Compile Include="Instructions\Movaps.cs" />
-    <Compile Include="Instructions\MovapsLoad.cs" />
-    <Compile Include="Instructions\MovCRLoad32.cs" />
-    <Compile Include="Instructions\MovCRLoad64.cs" />
-    <Compile Include="Instructions\MovCRStore32.cs" />
-    <Compile Include="Instructions\MovCRStore64.cs" />
-    <Compile Include="Instructions\Movdi64sd.cs" />
-    <Compile Include="Instructions\Movdsdi64.cs" />
-    <Compile Include="Instructions\MovLoad16.cs" />
-    <Compile Include="Instructions\MovLoad32.cs" />
-    <Compile Include="Instructions\MovLoad64.cs" />
-    <Compile Include="Instructions\MovLoad8.cs" />
-    <Compile Include="Instructions\MovLoadSeg32.cs" />
-    <Compile Include="Instructions\MovLoadSeg64.cs" />
-    <Compile Include="Instructions\Movsd.cs" />
-    <Compile Include="Instructions\MovsdLoad.cs" />
-    <Compile Include="Instructions\MovsdStore.cs" />
-    <Compile Include="Instructions\Movss.cs" />
-    <Compile Include="Instructions\MovssLoad.cs" />
-    <Compile Include="Instructions\MovssStore.cs" />
-    <Compile Include="Instructions\MovStore16.cs" />
-    <Compile Include="Instructions\MovStore32.cs" />
-    <Compile Include="Instructions\MovStore64.cs" />
-    <Compile Include="Instructions\MovStore8.cs" />
-    <Compile Include="Instructions\MovStoreSeg32.cs" />
-    <Compile Include="Instructions\MovStoreSeg64.cs" />
-    <Compile Include="Instructions\Movsx16To32.cs" />
-    <Compile Include="Instructions\Movsx16To64.cs" />
-    <Compile Include="Instructions\Movsx32To64.cs" />
-    <Compile Include="Instructions\Movsx8To32.cs" />
-    <Compile Include="Instructions\Movsx8To64.cs" />
-    <Compile Include="Instructions\MovsxLoad16.cs" />
-    <Compile Include="Instructions\MovsxLoad32.cs" />
-    <Compile Include="Instructions\MovsxLoad8.cs" />
-    <Compile Include="Instructions\Movups.cs" />
-    <Compile Include="Instructions\MovupsLoad.cs" />
-    <Compile Include="Instructions\MovupsStore.cs" />
-    <Compile Include="Instructions\Movzx16To32.cs" />
-    <Compile Include="Instructions\Movzx16To64.cs" />
-    <Compile Include="Instructions\Movzx32To64.cs" />
-    <Compile Include="Instructions\Movzx8To32.cs" />
-    <Compile Include="Instructions\Movzx8To64.cs" />
-    <Compile Include="Instructions\MovzxLoad16.cs" />
-    <Compile Include="Instructions\MovzxLoad32.cs" />
-    <Compile Include="Instructions\MovzxLoad8.cs" />
-    <Compile Include="Instructions\Mul32.cs" />
-    <Compile Include="Instructions\Mul64.cs" />
-    <Compile Include="Instructions\Mulsd.cs" />
-    <Compile Include="Instructions\Mulss.cs" />
-    <Compile Include="Instructions\Neg32.cs" />
-    <Compile Include="Instructions\Neg64.cs" />
-    <Compile Include="Instructions\Nop.cs" />
-    <Compile Include="Instructions\Not32.cs" />
-    <Compile Include="Instructions\Not64.cs" />
-    <Compile Include="Instructions\Or32.cs" />
-    <Compile Include="Instructions\Or64.cs" />
-    <Compile Include="Instructions\Out16.cs" />
-    <Compile Include="Instructions\Out32.cs" />
-    <Compile Include="Instructions\Out8.cs" />
-    <Compile Include="Instructions\Pause.cs" />
-    <Compile Include="Instructions\Pextrd32.cs" />
-    <Compile Include="Instructions\Pextrd64.cs" />
-    <Compile Include="Instructions\Pop64.cs" />
-    <Compile Include="Instructions\Popad.cs" />
-    <Compile Include="Instructions\Push64.cs" />
-    <Compile Include="Instructions\Pushad.cs" />
-    <Compile Include="Instructions\PXor.cs" />
-    <Compile Include="Instructions\Rcr32.cs" />
-    <Compile Include="Instructions\Rcr64.cs" />
-    <Compile Include="Instructions\RdMSR.cs" />
-    <Compile Include="Instructions\Ret.cs" />
-    <Compile Include="Instructions\Roundsd.cs" />
-    <Compile Include="Instructions\Roundss.cs" />
-    <Compile Include="Instructions\Sar32.cs" />
-    <Compile Include="Instructions\Sar64.cs" />
-    <Compile Include="Instructions\Sbb32.cs" />
-    <Compile Include="Instructions\Sbb64.cs" />
-    <Compile Include="Instructions\Setcc.cs" />
-    <Compile Include="Instructions\Shl32.cs" />
-    <Compile Include="Instructions\Shl64.cs" />
-    <Compile Include="Instructions\Shld32.cs" />
-    <Compile Include="Instructions\Shld64.cs" />
-    <Compile Include="Instructions\Shr32.cs" />
-    <Compile Include="Instructions\Shr64.cs" />
-    <Compile Include="Instructions\Shrd32.cs" />
-    <Compile Include="Instructions\Shrd64.cs" />
-    <Compile Include="Instructions\Sqrtsd.cs" />
-    <Compile Include="Instructions\Sqrtss.cs" />
-    <Compile Include="Instructions\Sti.cs" />
-    <Compile Include="Instructions\Sub32.cs" />
-    <Compile Include="Instructions\Sub64.cs" />
-    <Compile Include="Instructions\Subsd.cs" />
-    <Compile Include="Instructions\Subss.cs" />
-    <Compile Include="Instructions\Test32.cs" />
-    <Compile Include="Instructions\Test64.cs" />
-    <Compile Include="Instructions\Ucomisd.cs" />
-    <Compile Include="Instructions\Ucomiss.cs" />
-    <Compile Include="Instructions\WrMSR.cs" />
-    <Compile Include="Instructions\XAddLoad32.cs" />
-    <Compile Include="Instructions\XAddLoad64.cs" />
-    <Compile Include="Instructions\XChg32.cs" />
-    <Compile Include="Instructions\XChg64.cs" />
-    <Compile Include="Instructions\XChgLoad32.cs" />
-    <Compile Include="Instructions\XChgLoad64.cs" />
-    <Compile Include="Instructions\Xor32.cs" />
-    <Compile Include="Instructions\Xor64.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stages\AddressModeConversionStage.cs" />
-    <Compile Include="Stages\BuildStackStage.cs" />
-    <Compile Include="Stages\FinalTweakStage.cs" />
-    <Compile Include="Stages\FixedRegisterAssignmentStage.cs" />
-    <Compile Include="Stages\FloatingPointStage.cs" />
-    <Compile Include="Stages\RuntimeCallStage.cs" />
-    <Compile Include="Stages\IRTransformationStage.cs" />
-    <Compile Include="Stages\LongOperandStage.cs" />
-    <Compile Include="Stages\OptimizationStage.cs" />
-    <Compile Include="Stages\PostOptimizationStage.cs" />
-    <Compile Include="Stages\SimpleDeadCodeRemovalStage.cs" />
-    <Compile Include="Stages\TweakStage.cs" />
-    <Compile Include="X64.cs" />
-    <Compile Include="X64Instruction.cs" />
-    <Compile Include="X64Instructions.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Intrinsic\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
 </Project>
