--- a/Source/Mosa.Utility.RSP/Mosa.Utility.RSP.csproj
+++ b/Source/Mosa.Utility.RSP/Mosa.Utility.RSP.csproj
@@ -1,89 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mosa.Utility.RSP</RootNamespace>
-    <AssemblyName>Mosa.Utility.RSP</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <ProjectGuid>{5B810793-78E2-413C-CC05-FCDD12B7DB04}</ProjectGuid>
-    <TargetFrameworkProfile />
+    <AssemblyTitle>Mosa.Utility.RSP</AssemblyTitle>
+    <Company>MOSA Project</Company>
+    <Product>Mosa.Utility.RSP</Product>
+    <Copyright>Copyright © 2019</Copyright>
+    <DebugType>full</DebugType>
+    <LangVersion>8.0</LangVersion>
+    <OutputPath>..\..\bin\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\..\bin\Mosa.Utility.DebugEngine.xml</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
     <NoWarn>1591</NoWarn>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Checksum.cs" />
-    <Compile Include="Command\ClearAccessWatchPoint.cs" />
-    <Compile Include="Command\GetReasonHalted.cs" />
-    <Compile Include="Command\GetRegisters.cs" />
-    <Compile Include="Command\ExtendedMode.cs" />
-    <Compile Include="Command\Kill.cs" />
-    <Compile Include="Command\SetBreakPoint.cs" />
-    <Compile Include="Command\ClearBreakPoint.cs" />
-    <Compile Include="Command\ClearSoftwareBreakPoint.cs" />
-    <Compile Include="Command\ClearHardwareBreakPoint.cs" />
-    <Compile Include="Command\ReadRegister.cs" />
-    <Compile Include="Command\SetHardwareBreakPoint.cs" />
-    <Compile Include="Command\SetAccessWatchPoint.cs" />
-    <Compile Include="Command\ClearReadWatchPoint.cs" />
-    <Compile Include="Command\SetReadWatchPoint.cs" />
-    <Compile Include="Command\ClearWriteWatchPoint.cs" />
-    <Compile Include="Command\SetWriteWatchPoint.cs" />
-    <Compile Include="Command\SetSoftwareBreakPoint.cs" />
-    <Compile Include="Command\ReadMemory.cs" />
-    <Compile Include="Command\GeneralRegisterRead.cs" />
-    <Compile Include="Command\Step.cs" />
-    <Compile Include="GDBCommand.cs" />
-    <Compile Include="GDBNetworkStream.cs" />
-    <Compile Include="GDBClient.cs" />
-    <Compile Include="Command\Continue.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rle.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Mosa.ClassLib\Mosa.ClassLib.csproj">
-      <Project>{27A3C89C-1967-45FF-A77E-94F44995C42C}</Project>
-      <Name>Mosa.ClassLib</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-			 Other similar extension points exist, see Microsoft.Common.targets.
-	<Target Name="BeforeBuild">
-	</Target>
-	<Target Name="AfterBuild">
-	</Target>
-	-->
 </Project>
